--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server",
     "server": "nodemon server",
     "test": "./node_modules/.bin/mocha test --timeout 0 --exit",
-    "client": "npm start --prefix client",
+    "client": "npm start --prefix=client/",
     "dev": "concurrently \"npm run start\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
